// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBoxField should render correctly 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-16jruyc {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-16jruyc::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-16jruyc:hover,
.cache-16jruyc:focus {
  border-color: #4f0599;
}

.cache-16jruyc:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-16jruyc::-webkit-input-placeholder {
  opacity: 1;
}

.cache-16jruyc::-moz-placeholder {
  opacity: 1;
}

.cache-16jruyc:-ms-input-placeholder {
  opacity: 1;
}

.cache-16jruyc::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
    >
      <div
        class="cache-bjn8wh e18bmnpq2"
      >
        <input
          autocomplete="on"
          class="cache-16jruyc e18bmnpq0"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="e14o3tsk0 cache-xcx33n"
      >
        <div
          class="cache-1rshnsu e18bmnpq1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextBoxField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-ltnmcq {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-ltnmcq::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ltnmcq::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ltnmcq:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ltnmcq::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-ltnmcq:hover,
.cache-ltnmcq:focus {
  border-color: #4f0599;
}

.cache-ltnmcq:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-ltnmcq::-webkit-input-placeholder {
  opacity: 1;
}

.cache-ltnmcq::-moz-placeholder {
  opacity: 1;
}

.cache-ltnmcq:-ms-input-placeholder {
  opacity: 1;
}

.cache-ltnmcq::placeholder {
  opacity: 1;
}

.cache-xcx33n {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-xcx33n.cache-xcx33n {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
    >
      <div
        class="cache-bjn8wh e18bmnpq2"
      >
        <input
          autocomplete="on"
          class="cache-ltnmcq e18bmnpq0"
          disabled=""
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="e14o3tsk0 cache-xcx33n"
      >
        <div
          class="cache-1rshnsu e18bmnpq1"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextBoxField should render correctly with minLength 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1okdc8j {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  border-color: #dd3252;
}

.cache-1okdc8j::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1okdc8j::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1okdc8j:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1okdc8j::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1okdc8j:hover,
.cache-1okdc8j:focus {
  border-color: #4f0599;
}

.cache-1okdc8j:focus {
  box-shadow: 0px 0px 0px 3px #4F059940;
  border-color: #4f0599;
}

.cache-1okdc8j::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1okdc8j::-moz-placeholder {
  opacity: 1;
}

.cache-1okdc8j:-ms-input-placeholder {
  opacity: 1;
}

.cache-1okdc8j::placeholder {
  opacity: 1;
}

.cache-1okdc8j:hover,
.cache-1okdc8j:focus {
  border-color: #a6102d;
}

.cache-1okdc8j:focus {
  box-shadow: 0px 0px 0px 3px #DD325240;
  border-color: #dd3252;
}

.cache-9xime5 {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.cache-9xime5.cache-9xime5 {
  overflow: hidden;
}

.cache-1rshnsu {
  font-size: 12px;
  color: #dd3252;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div
      class="cache-3svqc9"
      minlength="13"
    >
      <div
        class="cache-bjn8wh e18bmnpq2"
      >
        <input
          autocomplete="on"
          class="cache-1okdc8j e18bmnpq0"
          name="test"
          type="text"
          value="test"
        />
      </div>
      <div
        class="e14o3tsk0 cache-9xime5"
      >
        <div
          class="cache-1rshnsu e18bmnpq1"
        >
          This field should have a length greater than 13
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
